# simplicity

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: lint.yml  main.yml  test.yml
docs/: alternatives.md  releasing.md
hooks/: post_gen_project.py
src/simplicity/: __init__.py  cli.py  legacy.py
tests/: test_project_generation.py
tests/legacy/: README.rst  sample.rst  sample2.rst  test_legacy.py
utils/: update_changelog.py
{{cookiecutter.slug}}/: Makefile  README.md  pyproject.toml  requirements-dev.txt
{{cookiecutter.slug}}/.github/workflows/: contributors.yml  python-ci.yml  python-publish.yml
{{cookiecutter.slug}}/docs/: releasing.md
{{cookiecutter.slug}}/src/{{cookiecutter.slug}}/: __init__.py  cli.py
{{cookiecutter.slug}}/tests/: test_{{cookiecutter.slug}}.py
