[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplicity"
version = "0.7.0"
description = "A straightforward and opinionated cookiecutter template for building Python packages."
readme = "README.md"
authors = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"}
]
maintainers = [
  {name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "rich",
  "typer"

]

[project.optional-dependencies]
test = [
    "black",  # code auto-formatting
    "coverage",  # testing
    "isort",  # code auto-formatting
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/pydanny/simplicity/issues"
changelog = "https://github.com/pydanny/simplicity/blob/master/CHANGELOG.md"
homepage = "https://github.com/pydanny/simplicity"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
simplicity = "simplicity.cli:app"

# Isort
# -----

[tool.isort]
line_length = 99
profile = "black"
default_section = "THIRDPARTY"
lines_after_imports = 2


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.ruff]
exclude = ["build", "dist", "docs", "venv", ".tox", ".nox", ".venv", ".mypy_cache", ".pytest_cache", ".git", "__pycache__"]
line-length = 99
